# url_shortener_fastapi

./: .gitignore  README.md  pyproject.toml
shortener_app/: crud.py  main.py
shortener_app/tests/: test_main.py
